<resources>
    <string name="app_name">CS175FinalProject</string>
    <string name="befit">BeFit</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_example">Jane Doe</string>
    <string name="current_streak">🔥 Current streak</string>
    <string name="_0_days">0 days</string>
    <string name="check_in">Check In</string>
    <string name="personal_records">Personal Records</string>
    <string name="bench_press">Bench Press</string>
    <string name="_180">180</string>
    <string name="deadlift">Deadlift</string>
    <string name="_230">230</string>
    <string name="rdl">RDL</string>
    <string name="_100">100</string>
    <string name="bicep_curl">Bicep Curl</string>
    <string name="_60">60</string>
    <string name="lat_pulldown">Lat Pulldown</string>
    <string name="_120">120</string>
    <string name="rows">Rows</string>
    <string name="shoulder_press">Shoulder Press</string>
    <string name="incline_bench">Incline Bench</string>
    <string name="_150">150</string>
    <string name="see_less">Show Less</string>
    <string name="_10_followers">10 followers</string>
    <string name="_8_following">8 following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_11_likes">11</string>
    <string name="_7_likes">7</string>
    <string name="_4_likes">4</string>
    <string name="_10_mins_ago">10 mins ago</string>
    <string name="ryan">Ryan</string>
    <string name="_7_mins_ago">7 mins ago</string>
    <string name="erica">Erica</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="close_camera">Close camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="friends_title">Friends</string>
    <string name="search">Search</string>
    <string name="friend_name">Friend Name</string>
    <string name="username">\@username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="enter_here">Enter Here</string>
    <string name="back_arrow">back arrow</string>
    <string name="add_workout">Add Workout</string>
    <string name="back">Back</string>
    <string name="_2_reactions">2</string>
    <string name="_1_reactions">1</string>
    <string name="_3_reactions">3</string>
    <string name="_5_reactions">5</string>
</resources>