<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:contentDescription="@string/back_arrow"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_arrow"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_arrow" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="142dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/profile_pic_sample"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_profile" />

            <TextView
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="textPersonName"/>

            <TextView
                android:text="@string/bench_press"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etBenchPress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/deadlift"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etDeadlift"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/rdl"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etRDL"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/bicep_curl"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etBicepCurls"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/lat_pulldown"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etLatPulldown"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/rows"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etRows"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/shoulder_press"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etShoulderPress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <TextView
                android:text="@string/incline_bench"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etInclineBench"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_here"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/saveProfileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="40dp"/>

                <Button
                    android:id="@+id/add_workoutBtb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_workout"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>