<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="155dp"
        android:layout_height="81dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:text="@string/befit"
        android:textSize="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="-70dp"
        android:layout_marginTop="340dp"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="@+id/app_title"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <Button
        android:id="@+id/createAcct_btn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>